# bike-racing-game-sfml

./: README.md
NewGame/include/: About.hpp  Constants.hpp  Game.hpp  ScrollingBackground.hpp  Timer.hpp
NewGame/src/: Game.cpp  ScrollingBackground.cpp
Projet_MotoGame_C++/NewGame/: CMakeLists.txt
Projet_MotoGame_C++/NewGame/include/: Bike.hpp  Menu.hpp  Obstacle.hpp  Scores.hpp
Projet_MotoGame_C++/NewGame/src/: About.cpp  Bike.cpp  Menu.cpp  Obstacle.cpp  Scores.cpp  Timer.cpp  main.cpp
